Added fetchAllPaginated/GetProjectByContract/GetContractsByProject and changed liquibase enabled to false.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ hibernate.default_schema=mhte_projects_experience
 
 ## Liquibase config
 spring.liquibase.change-log=classpath:/db/changelog-master.xml
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
