partial jwt decoding and sec

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ hibernate.default_schema=mhte_projects_experience
 ## Liquibase config
 spring.liquibase.change-log=classpath:/db/changelog-master.xml
 spring.liquibase.enabled=false
+
+## jwt
+app.taxis.jwt.secret=test
+app.taxis.jwt.issuer=TEST
+app.taxis.jwt.expiresSec=3600
+
