--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
             <artifactId>modelmapper</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.iknowhow.mhte</groupId>
+            <artifactId>auth-security</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
