--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,8 @@ app.taxis.jwt.secret=test
 app.taxis.jwt.issuer=TEST
 app.taxis.jwt.expiresSec=3600
 
+## filenet properties
+app.filenet.url=http://192.168.209.17:9080/wsi/FNCEWS40MTOM
+app.filenet.username=kafkasadmin
+app.filenet.password=demoP@ssw0rd
+app.filenet.objectStrone.name=OBJTOS2
