--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,12 @@
             <artifactId>jace</artifactId>
             <version>${app.filenet.jace.version}</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
