--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,3 +27,6 @@ app.taxis.jwt.issuer=TEST
 app.taxis.jwt.expiresSec=3600
 
 spring.application.name=mhte-projects-experience
+
+## Kubernetes config
+spring.cloud.kubernetes.discovery.enabled=false
