--- a/src/main/resources/application-microk8s.properties
+++ b/src/main/resources/application-microk8s.properties
@@ -27,3 +27,6 @@ app.taxis.jwt.issuer=${APP_TAXIS_JWT_ISSUER}
 app.taxis.jwt.expiresSec=${APP_TAXIS_EXPIRES_SEC}
 
 spring.application.name=mhte-projects-experience
+
+## Kubernetes config
+spring.cloud.kubernetes.discovery.enabled=false
