Added feign client for mhte-users (for now it is only used for testing intra-microservices login and MhteUserPrincipal fetching :) )

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,10 +23,16 @@ spring.liquibase.enabled=true
 
 ## jwt
 app.taxis.jwt.secret=test
-app.taxis.jwt.issuer=TEST
+app.taxis.jwt.issuer=YME-MHTE
 app.taxis.jwt.expiresSec=3600
 
 spring.application.name=mhte-projects-experience
 
+# Feign client urls (service names, in case of Kubernetes)
+app.feign-names.users.name=mhte-users-management
+app.feign-names.users.url=http://localhost:8080
+
 ## Kubernetes config
 spring.cloud.kubernetes.discovery.enabled=false
+
+server.port=8081
