--- a/src/main/resources/application-local-kube.properties
+++ b/src/main/resources/application-local-kube.properties
@@ -28,5 +28,9 @@ app.taxis.jwt.expiresSec=${APP_TAXIS_EXPIRES_SEC}
 
 spring.application.name=mhte-projects-experience
 
+# Feign client urls (service names, in case of Kubernetes)
+app.feign-names.users.name=mhte-users-management
+app.feign-names.users.url=http://mhte-users-management:8080
+
 ## Kubernetes config
 spring.cloud.kubernetes.discovery.enabled=false
