--- a/src/main/resources/application-microk8s.properties
+++ b/src/main/resources/application-microk8s.properties
@@ -30,7 +30,7 @@ spring.application.name=mhte-projects-experience
 
 # Feign client urls (service names, in case of Kubernetes)
 app.feign-names.users.name=mhte-users-management
-app.feign-names.users.url=http://mhte-users-management:8080
+app.feign-names.users.url=http://users-management-service:8080
 
 ## Kubernetes config
 spring.cloud.kubernetes.discovery.enabled=false
