root folder for FileNet moved to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,9 @@ app.filenet.url=http://192.168.209.17:9080/wsi/FNCEWS40MTOM
 app.filenet.username=kafkasadmin
 app.filenet.password=demoP@ssw0rd
 app.filenet.objectStrone.name=OBJTOS2
+app.filenet.folder.root=/????
+
 
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
+
