fixed app crashing on start due to missing feign property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,10 @@ app.filenet.password=demoP@ssw0rd
 app.filenet.objectStrone.name=OBJTOS2
 app.filenet.folder.root=/????
 
+# Feign client urls (service names, in case of Kubernetes)
+app.feign-names.users.name=mhte-users-management
+app.feign-names.users.url=http://users-management-service:8080
+
 
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
