commented-out old creation endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,7 @@ app.filenet.username=kafkasadmin
 app.filenet.password=demoP@ssw0rd
 app.filenet.objectStrone.name=OBJTOS2
 app.filenet.folder.root=/????
+app.filenet.folder.root.subcontractors=/????/SUBCONTRACTORS
 
 # Feign client urls (service names, in case of Kubernetes)
 app.feign-names.users.name=mhte-users-management
