Modified application.properties to use profiles Changed local-kube and microk8s profiles to get values for FileNet from ConfigMap mhte-config

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,18 +19,29 @@ hibernate.default_schema=mhte_projects_experience
 
 ## Liquibase config
 spring.liquibase.change-log=classpath:/db/changelog-master.xml
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 
 ## jwt
 app.taxis.jwt.secret=test
 app.taxis.jwt.issuer=YME-MHTE
 app.taxis.jwt.expiresSec=3600
 
-spring.application.name=mhte-projects-experience
+## filenet properties
+app.filenet.url=http://192.168.209.17:9080/wsi/FNCEWS40MTOM
+app.filenet.username=kafkasadmin
+app.filenet.password=demoP@ssw0rd
+app.filenet.objectStore.name=OBJTOS2
+app.filenet.folder.root=/ΜΗΤΕ
+app.filenet.folder.root.subcontractors=/ΜΗΤΕ/SUBCONTRACTORS
+
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
 
 # Feign client urls (service names, in case of Kubernetes)
 app.feign-names.users.name=mhte-users-management
 app.feign-names.users.url=http://localhost:8080
+
+spring.application.name=mhte-projects-experience
 
 ## Kubernetes config
 spring.cloud.kubernetes.discovery.enabled=false
