--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,44 +1,2 @@
-## Database info
-
-#spring.datasource.url=jdbc:postgresql://192.168.209.100:5432/mhte?searchpath=mhte_projects_experience&currentSchema=mhte_projects_experience
-#spring.datasource.username=mhte
-#spring.datasource.password=mhte
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.default_schema=mhte_projects_experience
-#hibernate.default_schema=mhte_projects_experience
-
-spring.datasource.url=jdbc:db2://dev-docker.corp.iknowhow.com:50000/MHTE:currentSchema=MHTE_PROJECTS_EXPERIENCE;currentFunctionPath=MHTE_PROJECTS_EXPERIENCE;
-spring.datasource.username=db2inst1
-spring.datasource.password=P@ssw0rd
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DB2Dialect
-spring.datasource.driver-class-name=com.ibm.db2.jcc.DB2Driver
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.default_schema=mhte_projects_experience
-hibernate.default_schema=mhte_projects_experience
-
-## Liquibase config
-spring.liquibase.change-log=classpath:/db/changelog-master.xml
-spring.liquibase.enabled=false
-
-## jwt
-app.taxis.jwt.secret=test
-app.taxis.jwt.issuer=TEST
-app.taxis.jwt.expiresSec=3600
-
-## filenet properties
-app.filenet.url=http://192.168.209.17:9080/wsi/FNCEWS40MTOM
-app.filenet.username=kafkasadmin
-app.filenet.password=demoP@ssw0rd
-app.filenet.objectStrone.name=OBJTOS2
-app.filenet.folder.root=/????
-app.filenet.folder.root.subcontractors=/????/SUBCONTRACTORS
-
-# Feign client urls (service names, in case of Kubernetes)
-app.feign-names.users.name=mhte-users-management
-app.feign-names.users.url=http://users-management-service:8080
-
-
-spring.servlet.multipart.max-file-size=-1
-spring.servlet.multipart.max-request-size=-1
+spring.profiles.active=@activatedProperties@
 
