--- a/src/main/resources/application-microk8s.properties
+++ b/src/main/resources/application-microk8s.properties
@@ -26,6 +26,17 @@ app.taxis.jwt.secret=${APP_TAXIS_JWT_SECRET}
 app.taxis.jwt.issuer=${APP_TAXIS_JWT_ISSUER}
 app.taxis.jwt.expiresSec=${APP_TAXIS_EXPIRES_SEC}
 
+## filenet properties
+app.filenet.url=${APP_FILENET_URL}
+app.filenet.username=${APP_FILENET_USERNAME}
+app.filenet.password=${APP_FILENET_PASSWORD}
+app.filenet.objectStore.name=${APP_FILENET_OBJECT_STORE}
+app.filenet.folder.root=${APP_FILENET_FOLDER_ROOT}
+app.filenet.folder.root.subcontractors=${APP_FILENET_FOLDER_ROOT_SUBCONTRACTORS}
+
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
+
 spring.application.name=mhte-projects-experience
 
 # Feign client urls (service names, in case of Kubernetes)
