boilerplate feign to companies

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,7 +13,7 @@ spring.datasource.username=db2inst1
 spring.datasource.password=P@ssw0rd
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DB2Dialect
 spring.datasource.driver-class-name=com.ibm.db2.jcc.DB2Driver
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=mhte_projects_experience
 hibernate.default_schema=mhte_projects_experience
 
@@ -39,6 +39,10 @@ spring.servlet.multipart.max-request-size=-1
 # Feign client urls (service names, in case of Kubernetes)
 app.feign-names.users.name=mhte-users-management
 app.feign-names.users.url=http://localhost:8080
+
+app.feign-names.companies.name=mhte-companies
+app.feign-names.companies.url=http://localhost:8082
+
 
 spring.application.name=mhte-projects-experience
 
