--- a/src/main/resources/application-local-kube.properties
+++ b/src/main/resources/application-local-kube.properties
@@ -43,5 +43,9 @@ spring.application.name=mhte-projects-experience
 app.feign-names.users.name=mhte-users-management
 app.feign-names.users.url=http://users-management-service:8080
 
+app.feign-names.companies.name=mhte-companies
+app.feign-names.companies.url=http://mhte-companies-service:8080
+
+
 ## Kubernetes config
 spring.cloud.kubernetes.discovery.enabled=false
