retry on companies feign

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -46,6 +46,11 @@ app.feign-names.companies.url=http://localhost:8082
 
 spring.application.name=mhte-projects-experience
 
+# Retry properties
+resilience4j.retry.instances.retryService.wait-duration=1s
+resilience4j.retry.instances.retryService.max-attempts=3
+resilience4j.retry.instances.retryService.retry-exceptions=com.iknowhow.mhte.projectsexperience.exception.MhteProjectServiceNotAvailableException
+
 ## Kubernetes config
 spring.cloud.kubernetes.discovery.enabled=false
 
