--- a/src/main/resources/application-local-kube.properties
+++ b/src/main/resources/application-local-kube.properties
@@ -46,6 +46,11 @@ app.feign-names.users.url=http://users-management-service:8080
 app.feign-names.companies.name=mhte-companies
 app.feign-names.companies.url=http://mhte-companies-service:8080
 
+# Retry properties
+resilience4j.retry.instances.retryService.wait-duration=1s
+resilience4j.retry.instances.retryService.max-attempts=3
+resilience4j.retry.instances.retryService.retry-exceptions=com.iknowhow.mhte.projectsexperience.exception.MhteProjectServiceNotAvailableException
+
 
 ## Kubernetes config
 spring.cloud.kubernetes.discovery.enabled=false
